// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component Test slots 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
     
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      style=""
      tabindex="-1"
    >
      <li
        class="select__item select__item--no-options visible active"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             My item
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component With items 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <span
      class="dropdown__selected-placeholder"
    >
      action.makeChoice
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      style=""
      tabindex="-1"
    >
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component With items 2`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
     
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      style=""
      tabindex="-1"
    >
      <li
        class="select__item select__item--no-options visible active"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
       
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
       
      <li
        class="select__item select__item--no-options visible disabled"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="C"
            >
              C
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
       
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <i
              class="select__item-icon times"
            />
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="D"
            >
              D
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
       
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="E"
            >
              E
            </span>
          </div>
           
          <div
            class="select__item-description"
          >
            
      My description
    
          </div>
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component With items 3`] = `
<div
  class="dropdown dropdown--floating"
  role="list"
  tabindex="0"
>
  <!---->
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      tabindex="-1"
    >
      <li
        class="select__item select__item--no-options visible active"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
       
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component basics 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <span
      class="dropdown__selected-placeholder"
    >
      action.makeChoice
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      style="display: none;"
      tabindex="-1"
    />
     
    <div
      class="select__items--empty"
    >
      
        dropdown.empty
      
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component basics 2`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <span
      class="dropdown__selected-placeholder"
    >
      action.makeChoice
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <!---->
     
    <ul
      class="select__items"
      style="display: none;"
      tabindex="-1"
    />
     
    <div
      class="select__items--empty"
    >
      
        dropdown.empty
      
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component basics 3`] = `
<div
  class="dropdown dropdown--disabled"
  role="list"
  tabindex=""
>
  <a
    class="dropdown__selected"
  >
    <span
      class="dropdown__selected-placeholder"
    >
      action.makeChoice
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      style="display: none;"
      tabindex="-1"
    />
     
    <div
      class="select__items--empty"
    >
      
        dropdown.empty
      
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component change value prop 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
     
    <span
      class="dropdown__selected-text"
      title="B"
    >
      B
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      style=""
      tabindex="-1"
    >
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
       
      <li
        class="select__item select__item--no-options visible active"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component test focus 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex=""
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
     
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items prevent-scroll"
      style=""
      tabindex="-1"
    >
      <li
        class="select__item select__item--no-options visible active hover"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component test focus 2`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
     
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items prevent-scroll"
      style=""
      tabindex="-1"
    >
      <li
        class="select__item select__item--no-options visible active hover"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component test interactions 1`] = `
<div
  class="dropdown"
  role="list"
  tabindex=""
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
     
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items prevent-scroll"
      style=""
      tabindex="-1"
    >
      <li
        class="select__item select__item--no-options visible active hover"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
       
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component test interactions 2`] = `
<div
  class="dropdown"
  role="list"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
     
    <span
      class="dropdown__selected-text"
      title="A"
    >
      A
    </span>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items prevent-scroll"
      style=""
      tabindex="-1"
    >
      <li
        class="select__item select__item--no-options visible active hover"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
       
      <li
        class="select__item select__item--no-options visible"
        role="listitem"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
          </div>
           
          <!---->
        </a>
         
        <i
          class="select__item-active-icon iconoir-check"
        />
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;
